2010-08-25  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_session.c (xnee_rep_prepare): 
	Return from xnee_rep_prepare() if reading of meta data fails

	* libxnee/src/print.c (xnee_human_print_event): 
	Removed useless assignment wasting "storage"	
	(xnee_human_print_request): 
	Removed useless assignment of request_name (wasting "storage")

	* libxnee/src/xnee_range.c: 
	Updated copyright year
	Removed unused variable "len"

	* libxnee/src/xnee_setget.c: 
	Better null handling (xnee_set_project_file)

	* libxnee/src/xnee.c:
	Removed unhandled check of return value
	Added copyright year

2010-07-30  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in (libgnomeui_LIBS): 
	check for gtk-config
        try our best to look for gnome.h file

	* pnee/src/pnee_impl.h: 
	Removed inclusion of gnome.h

2010-06-17  Henrik Sandklef  <hesa@haas.sandklef.com>

	* doc/Makefile.am (install): 
	Installation of docs is now depending on BUILDOC

	* configure.in: 
	Added new option: --enable-man
	Checks for makeinfo once, uses result many times
	Can build guis and manual without all doc stuff

2010-05-27  Henrik Sandklef  <hesa@sandklef.com>

	* libxnee/src/xnee_record.c: 
	Removed debug/printf printout when closing context

	* libxnee/src/xnee_session.c: 
	Re-enabling closing of displays

	* cnee/src/main.c (main): 
	Removing set_verbose in main (huah!!)

	* libxnee/src/xnee_keysym.c (xnee_token_to_km): 
	Checking if keycode/modifier is valid before using it

2010-05-26  Henrik Sandklef  <hesa@sandklef.com>

	* configure.in: 
	Bumping version to 3.06

	* libxnee/src/xnee_resource.c: 
	Replace "forced-reparent-recording" with
	"no-reparent-recording"
	
	* libxnee/src/xnee_record.c (xnee_record_handle_event_printer): 
	Don't print reparent event if no-reparent

	* libxnee/src/print.c (xnee_print_xnee_settings): 
	If no-reparent-recording used, print option to file

	* libxnee/src/xnee_session.c (xnee_init): 
	no-reparent turned OFF default
