@@ -4,7 +4,7 @@
  * Xnee enables recording and replaying of X protocol data           
  *                                                                   
  * Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 
- *               2005, 2006, 2007, 2009  Henrik Sandklef 
+ *               2005, 2006, 2007, 2009, 2010  Henrik Sandklef 
  *                                                                   
  * This program is free software; you can redistribute it and/or     
  * modify it under the terms of the GNU General Public License       
@@ -333,10 +333,6 @@ xnee_expression_handle_settings(xnee_data *xd, char *tmp, int synt_mode)
 static int
 xnee_expression_handle_comment(xnee_data *xd, char *tmp)
 {
-  int len ;
-
-  len = strlen(tmp);
-
   xnee_verbose ((xd, "handling comment: \"%s\"\n", tmp));
   if (!strncmp("#",tmp,1))  /* # META data */
     {
@@ -644,6 +640,7 @@ xnee_expression_handle_prim_sub(xnee_data *xd, char *arg, xnee_script_s *xss)
       /* key=a key=shift etc */
       else if (strncmp(var,XNEE_FAKE_KEY_ARG,strlen(XNEE_FAKE_KEY_ARG))==0)
 	{
+
 	  if (strlen(val)==1)  
 	    {
 	      valp = &val[0];
